--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,8 @@
     padding: 0px 0px 0px 10px;
     line-height: 1.8rem;
     position: relative; }
-    .lkToolptip .tooltip-menu .tooltip__a, .lkToolptip .tooltip-menu a {
+    .lkToolptip .tooltip-menu .tooltip__a,
+    .lkToolptip .tooltip-menu a {
       text-decoration: none;
       font-size: 18px;
       color: #333333;
@@ -253,7 +254,8 @@
       transition: all 0.15s ease-in;
       position: relative;
       cursor: pointer; }
-      .lkToolptip .tooltip-menu .tooltip__a span, .lkToolptip .tooltip-menu a span {
+      .lkToolptip .tooltip-menu .tooltip__a span,
+      .lkToolptip .tooltip-menu a span {
         padding-right: 15px; }
     .lkToolptip .tooltip-menu .tooltip__a:hover {
       border-right: 8px solid #F07543;
@@ -686,7 +688,8 @@ header {
       transition: all 0.2s ease-in;
       margin-bottom: 20px;
       position: relative; }
-      .nearestEvents .scrollWrap .scrollContainer div, .nearestEvents .scrollWrap .scrollContainer .specialtyItem {
+      .nearestEvents .scrollWrap .scrollContainer div,
+      .nearestEvents .scrollWrap .scrollContainer .specialtyItem {
         white-space: nowrap;
         width: auto;
         margin-right: 14px;
@@ -725,7 +728,7 @@ header {
   margin-top: 50px;
   position: relative; }
   .container .infom__block .inform__block-left {
-    width: 50%;
+    width: 60%;
     margin-top: 30px;
     position: relative; }
     .container .infom__block .inform__block-left h2 {
@@ -749,7 +752,7 @@ header {
           font-weight: 100; }
   .container .infom__block .inform__block-right {
     margin-top: 15px;
-    width: 50%;
+    width: 40%;
     position: relative;
     text-align: right; }
     .container .infom__block .inform__block-right .butto__wrap {
@@ -760,7 +763,7 @@ header {
       z-index: -1;
       background: linear-gradient(255deg, #feda7a, #f72f2f, #7166cf);
       background-size: 130% 110%;
-      transition: all  0.5s ease !important; }
+      transition: all 0.5s ease !important; }
       .container .infom__block .inform__block-right .butto__wrap button {
         margin-right: -0.5px;
         display: flex;
@@ -950,7 +953,7 @@ header {
       justify-content: space-between;
       text-decoration: none;
       width: 80%;
-      margin-left: 5%;
+      margin-left: 10%;
       border-radius: 12.4px;
       background-color: #333333; }
       .goals .goals-right .ads__block .header {
@@ -972,8 +975,6 @@ header {
         .goals .goals-right .ads__block .header:hover .svgArrow {
           transform: translateX(15px);
           transition: all 0.2s ease; }
-      .goals .goals-right .ads__block .add-baner {
-        width: 100%; }
       .goals .goals-right .ads__block .footer {
         width: 100%;
         display: flex;
@@ -987,20 +988,29 @@ header {
           font-weight: 200; }
     .goals .goals-right .brand__name {
       display: flex;
-      width: 90%;
+      width: 80%;
+      margin-left: 10%;
       justify-content: space-between;
       margin-top: 80px;
       align-items: center; }
       .goals .goals-right .brand__name img {
-        width: 130px;
-        height: 130px; }
+        width: 100px;
+        height: 100px; }
       .goals .goals-right .brand__name .info .info-item {
         margin-left: 30px;
         font-family: Gilroy_Semiold;
-        font-size: 20px;
+        font-size: 18px;
         text-decoration: none;
         color: #333333;
-        line-height: 35px; }
+        line-height: 25px; }
+      @media (max-width: 1340px) and (min-width: 992px) {
+        .goals .goals-right .brand__name .info .info-item {
+          margin-left: 30px;
+          font-family: Gilroy_Semiold;
+          font-size: 15px;
+          text-decoration: none;
+          color: #333333;
+          line-height: 20px; } }
 
 .h3 {
   text-align: center;
@@ -1011,7 +1021,7 @@ header {
   margin-top: 80px; }
 
 .event-card {
-  cursor: default;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -1176,10 +1186,14 @@ header {
     left: -2px;
     bottom: 66px; }
 
+.swiper-slide {
+  width: 340px; }
+
 .cards__slider {
   width: 100%; }
 
-.swiper-button-next:after, .swiper-button-prev:after {
+.swiper-button-next:after,
+.swiper-button-prev:after {
   color: #333333; }
 
 .cards__slider {
@@ -1212,39 +1226,62 @@ header {
     line-height: 25px; } }
 
 @media (max-width: 992px) {
+  .program__item {
+    width: 98% !important; }
+  .inform__block-right .butto__wrap {
+    width: 100% !important; }
+    .inform__block-right .butto__wrap button {
+      width: 100% !important;
+      font-size: 18px; }
+      .inform__block-right .butto__wrap button svg {
+        right: 10px !important; }
+  .inform__block-right .links {
+    width: 100% !important; }
+    .inform__block-right .links a {
+      padding-left: 10px !important;
+      margin-top: 20px !important;
+      padding-right: 0 !important; }
+      .inform__block-right .links a span {
+        font-size: 18px; }
   .flex-direction-controller {
     display: flex;
     flex-direction: column;
     margin-top: 0px !important; }
     .flex-direction-controller .links a {
-      padding-left: 30px !important; } }
-  @media (max-width: 992px) and (max-width: 992px) {
-    .flex-direction-controller .links a {
-      padding-left: 0px !important; } }
-
-@media (max-width: 992px) {
+      padding-left: 30px !important; }
     .flex-direction-controller .section {
       width: 100% !important; }
-    .flex-direction-controller .ads__block {
-      margin-top: 0px !important;
-      width: 100% !important;
-      margin-left: 0px !important; }
     .flex-direction-controller .brand__name {
-      width: 100% !important; }
-  .reverse {
-    flex-direction: column-reverse; }
+      width: 80%; }
   .inform__block-right {
     text-align: left !important; } }
+
+@media (max-width: 767px) {
+  .inform__block-left {
+    width: 100% !important; }
+  .inform__block-right {
+    width: 100% !important; }
+    .inform__block-right .links {
+      width: 100% !important; }
+      .inform__block-right .links a {
+        font-size: 30px !important; }
+        .inform__block-right .links a span {
+          font-weight: 800 !important; }
+  .reverse {
+    margin-top: 0px !important;
+    flex-direction: column-reverse; } }
 
 @media (max-width: 576px) {
   .h2 {
     font-size: 24px !important; }
   h3 {
-    font-size: 24px !important; }
+    font-size: 24px !important;
+    margin-top: 40px !important; }
   .butto__wrap {
-    width: 100% !important; }
+    width: 100%; }
     .butto__wrap button {
-      width: 100% !important; }
+      width: 100% !important;
+      font-size: 30px; }
   .links {
     width: 340px !important; }
     .links a {
@@ -1252,12 +1289,20 @@ header {
       margin-top: 20px !important; }
       .links a span {
         font-size: 20px !important; }
-  .brand__name img {
-    width: 100px !important;
-    height: 100px !important; }
-  .brand__name .info .info-item {
-    font-size: 18px !important;
-    line-height: 24px !important; } }
+  .brand__name {
+    margin-top: 40px !important; }
+    .brand__name img {
+      width: 100px !important;
+      height: 100px !important; }
+    .brand__name .info .info-item {
+      font-size: 18px !important;
+      line-height: 24px !important; }
+  .ads__block {
+    margin-top: 0px !important;
+    width: 100% !important;
+    margin-left: 0% !important; }
+    .ads__block .header {
+      font-size: 16px !important; } }
 
 @media (max-width: 500px) {
   .h2 {
@@ -1288,7 +1333,9 @@ header {
   .p__bold {
     font-size: 19px !important; }
   .title {
-    font-size: 20px !important; } }
+    font-size: 20px !important; }
+  .butto__wrap button {
+    font-size: 18px; } }
 
 @media (max-width: 350px) {
   .zet .number {
@@ -1301,9 +1348,7 @@ header {
       padding-left: 0px !important;
       margin-top: 20px !important; }
       .links a span {
-        font-size: 16px !important; }
-  .butto__wrap button {
-    font-size: 16px !important; } }
+        font-size: 16px !important; } }
 
 .rightArrow {
   background-image: url("../assets/arrow-slider-right.png");
@@ -1337,7 +1382,6 @@ header {
   left: 0;
   z-index: -1; }
   .modal_wrap .modal_window {
-    position: fixed;
     width: 90%;
     height: 80%;
     left: 5%;
@@ -1350,7 +1394,12 @@ header {
       right: 10px;
       top: 10px; }
     .modal_wrap .modal_window .modal_content {
+      height: 100%;
       overflow-y: scroll; }
+      .modal_wrap .modal_window .modal_content .modal__scroll__content {
+        min-width: 100%;
+        display: flex;
+        flex-wrap: wrap; }
 
 .modal_wrap-active {
   opacity: 1;
@@ -1417,7 +1466,6 @@ header {
   color: #FFF;
   font-size: 14px;
   line-height: 22px;
-  padding-left: 59px;
   margin-top: 20px; }
 
 .footer-inner-bot .policy-footer span {
@@ -1425,10 +1473,12 @@ header {
   font-size: 14px;
   margin-top: 10px; }
 
-.footer-inner-bot ul li a {
-  font-size: 28px;
-  line-height: 34px;
-  color: #FFF; }
+.ur {
+  display: block;
+  font-size: 14px;
+  margin-top: 10px;
+  color: #FFF;
+  line-height: 24px; }
 
 .footer-inner-bot ul li:not(:last-child) {
   margin-bottom: 8px; }
@@ -1438,7 +1488,8 @@ li a {
   font-family: Gilroy_Regular; }
 
 @media (max-width: 992px) {
-  .footer-list-block:not(:last-child), .footer-list-block {
+  .footer-list-block:not(:last-child),
+  .footer-list-block {
     padding-left: 0px; }
   .footer-inner-item {
     margin-bottom: 0; }
