--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2005,6 +2005,8 @@ header {
 
     .brand__name {
         margin-top: 40px !important;
+        width: 100% !important;
+        margin-left: 0 !important;
         img {
             width: 100px !important;
             height: 100px !important;
